# openworldprotocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  STATUS.md
apps/owp-launchpad-private.placeholder/: README.md
apps/owp-registry-web/: README.md
apps/owp-unity/: README.md
apps/owp-unity/Assets/OWPStarterPack/: LICENSE.txt  README.md
apps/owp-unity/Assets/Resources/OWPStarterPack/Textures/: circuit.tga  cloth.tga  scales.tga  stripes.tga
apps/owp-unity/Assets/Scripts/: OwpBootstrap.cs  StlImporter.cs
apps/owp-unity/Assets/StreamingAssets/OWPAssetPacks/kenney-cc0/: README.txt  alien.glb  ambulance.glb  astronautA.txt  astronautB.glb  barrel.glb  gate_complex.glb  gate_simple.glb  lampRoundFloor.glb  lampWall.glb  plantSmall2.glb  plantSmall3.glb  rock.glb  rock_crystals.glb  rock_crystalsLargeA.glb  rock_crystalsLargeB.glb  rock_largeA.glb  rock_largeB.glb  rocks_smallA.glb  rocks_smallB.glb  van.glb
apps/owp-unity/ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
crates/owp-client-cli/: Cargo.toml
crates/owp-client-cli/src/: main.rs
crates/owp-discovery/: Cargo.toml  README.md
crates/owp-discovery/src/: lib.rs
crates/owp-protocol/: Cargo.toml  README.md
crates/owp-protocol/src/: lib.rs  wire.rs
crates/owp-registry-types/: Cargo.toml
crates/owp-registry-types/src/: lib.rs
crates/owp-server/: Cargo.toml  README.md
crates/owp-server/src/: assistant.rs  avatar.rs  avatar_mesh.rs  main.rs  storage.rs  tcp_game.rs  web_admin.rs  world_plan.rs
crates/owp-solana/: README.md
crates/owp-worldgen/: README.md
docs/: ARCHITECTURE.md  ASSISTANT_PROVIDERS.md  CLIENT_UX.md  DEVELOPMENT.md  LAUNCHPAD_DIRECTORY.md  PUBLISH_FLOW.md  REGISTRY_ONCHAIN.md  WALLET_SIGNING.md  WORLD_ASSEMBLY.md
docs/protocol/: v0.1.md
programs/owp-registry/: Cargo.toml  README.md
programs/owp-registry/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
tooling/scripts/: README.md
