[workspace]
members = [
  "crates/owp-protocol",
  "crates/owp-server",
  "crates/owp-client-cli",
  "crates/owp-discovery",
  "crates/owp-registry-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
base64 = "0.22.1"
borsh = "0.10.4"
borsh-derive = "0.10.4"
bs58 = "0.5.1"
clap = { version = "4.5.27", features = ["derive"] }
directories = "5.0.1"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
sha2 = "0.10.8"
tempfile = "3.10.1"
time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
tokio = { version = "1.43.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
thiserror = "2.0.11"
hex = "0.4.3"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
