[package]
name = "owp-registry"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh = "0.10.4"
borsh-derive = "0.10.4"
owp-registry-types = { path = "../../crates/owp-registry-types" }
solana-program = "1.18.24"
